# Egraph_Mapping

./: Cargo.toml  README.md  abc.history  infix_to_prefix.py  language.rs
benchmark/synthetic/: abc.history  abc_old.history
benchmark/synthetic/c17/: abc.history  c17.blif  c17_map.blif
benchmark/synthetic/c2670/: abc.history  c17.blif  c2670.blif  c2670_map.blif
benchmark/synthetic/c432/: abc.history  c432.blif  c432_map.blif
benchmark/synthetic/c5315/: abc.history  c5315.blif  c5315_map.blif
benchmark/synthetic/c880/: abc.history  c880.blif  c880_map.blif
benchmark/synthetic/mult2/: abc.history  mult2-map.blif  mult2.bench  mult2.blif  output.blif
src/: dynamic_rules.rs  language.rs  lib.rs  lp.rs  main.rs  mod.rs  static_rules.rs
