[package]
name = "egraph_mapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[dependencies.egg]
version = "0.9.5"  # 使用适合你项目的版本


[dependencies.coin_cbc]
version = "0.1.6"

[dependencies.log]
version = "0.4.17"


[lib]
path = "src/language.rs"

